[package]
name = "rush_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-channel = "1.9.0"
async-trait = "0.1.73"
serde = {version = "1.0.188",features = ["derive"]}
serde_json = "1.0.107"
tokio = {version = "1.32",features = ["full"]}
wd_tools = {version = "0.8.12",features = ["point-free","sync"]}
